--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,12 +32,19 @@ android {
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
-
+    signingConfigs {
+        release {
+            storeFile file("my-release-key.jks")
+            storePassword '30042003Jj$$'
+            keyAlias "key"
+            keyPassword '30042003Jj$$'
+        }
+    }
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig = signingConfigs.debug
+            signingConfig = signingConfigs.release
         }
     }
 }
