--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,30 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"proyectointegradojg2024","appId":"1:866008257966:android:a5d4ba7f3284e62827e43f","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"proyectointegradojg2024","configurations":{"android":"1:866008257966:android:a5d4ba7f3284e62827e43f","web":"1:866008257966:web:695ed4c8a0c7e35627e43f"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "proyectointegradojg2024",
+          "appId": "1:866008257966:android:a5d4ba7f3284e62827e43f",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "proyectointegradojg2024",
+          "configurations": {
+            "android": "1:866008257966:android:a5d4ba7f3284e62827e43f",
+            "web": "1:866008257966:web:695ed4c8a0c7e35627e43f"
+          }
+        }
+      }
+    }
+  },
+  "hosting": {
+    "public": "build/web",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ]
+  }
+}
